Added autofocus in script

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
     //   alert("Coordinates copied to clipboard!");
     }
     document.getElementById("mapsLink").focus();
+    window.onload = function() {
+    document.getElementById("mapsLink").focus();
+    };
+
   </script>
 </body>
 </html>
